--- a/src/app/vistas/Componentes/SIDEBAR/sidebar.component.html
+++ b/src/app/vistas/Componentes/SIDEBAR/sidebar.component.html
@@ -2,12 +2,12 @@
   <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
       <mat-icon>home</mat-icon> <span class="nav-caption">home</span>
   </a>
-  <a mat-list-item routerLink="/owner" (click)="onSidenavClose()">
-      <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">OPCION 1</span>   
+  <a mat-list-item routerLink="/clientes" (click)="onSidenavClose()">
+      <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Clientes</span>   
   </a>
-  <a mat-list-item routerLink="#" (click)="onSidenavClose()">
+ <!-- <a mat-list-item routerLink="#" (click)="onSidenavClose()">
       <mat-icon>account_balance</mat-icon><span class="nav-caption">OPCION 2</span>
-  </a>
+  </a> 
 <mat-list-item [matMenuTriggerFor]="menu">
     <mat-icon>unfold_more</mat-icon>
     <a matline>LISTA</a>
@@ -16,4 +16,5 @@
   <button mat-menu-item (click)="onSidenavClose()">LISTA 1</button>
   <button mat-menu-item (click)="onSidenavClose()">LISTA 2</button>
 </mat-menu>
+-->
 </mat-nav-list>
