--- a/src/app/vistas/clientes/registro-cliente/registro-cliente.component.html
+++ b/src/app/vistas/clientes/registro-cliente/registro-cliente.component.html
@@ -54,7 +54,7 @@
       </div>
       <div class="example-button-row">
           <button mat-raised-button color="primary" [disabled]="formIngresoClientes.invalid">Ingresar</button>
-         <button mat-raised-button color="warn" (click)="router.navigate(['/home'])">Volver</button>
+         <button mat-raised-button color="warn" (click)="router.navigate(['/clientes'])">Volver</button>
         </div>
     </form>
 
