--- a/src/app/vistas/login/login.component.html
+++ b/src/app/vistas/login/login.component.html
@@ -1,7 +1,7 @@
 
   <div id="app" class="app">
 	  <div class="left">
-	    <div class="apptittle"> <h3></h3><h3>SISTEMA BOLETAS</h3> </div>
+	    <div class="apptittle"> <h3></h3><h3>SISTEMA </h3> </div>
 	   
 	    	<label  id="userLabel">Usuario</label>
 	    	<input type="text" id="user" #u1/>
@@ -22,7 +22,12 @@
                     <li></li>
                     <li></li>
                     <li></li>
-                    <li></li>
+										<li></li>
+										<li></li>
+										<li></li>
+										<li></li>
+										<li></li>
+										<li></li>
                     <li></li>
                     <li></li>
                     <li></li>
