--- a/src/app/vistas/home/home.component.html
+++ b/src/app/vistas/home/home.component.html
@@ -7,6 +7,7 @@
      <mat-card-header>
        <mat-card-title>Inicio</mat-card-title>
        <mat-card-subtitle>Atajos!</mat-card-subtitle>
+       <button mat-button (click)="factura()" >tFACTURA</button>
      </mat-card-header>
      <mat-card-content>
       
@@ -18,10 +19,15 @@
             <div class="col-xl-3 col-lg-5">
                     <app-cards [bgClass]="'info'" [routerLink]="['/usuarios']" [icon]="'people'" [label]="'Usuarios'"></app-cards>
             </div>
+            <div class="col-xl-3 col-lg-5">
+                <app-cards [bgClass]="'danger'" [routerLink]="['/productos']" [icon]="'local_grocery_store'" [label]="'Productos'"></app-cards>
+        </div>
         </div>
      </mat-card-content>
      <mat-card-actions>
    
+  
+
      </mat-card-actions>
    </mat-card>
   </div>
