--- a/src/app/vistas/login/login.component.scss
+++ b/src/app/vistas/login/login.component.scss
@@ -106,7 +106,7 @@ body {
   
   .right{
       padding: 0;
-      background: #4e54c8;  
+      background: #323238;  
       background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
       width: 100%;
       height:100vh;
@@ -129,9 +129,9 @@ body {
       position: absolute;
       display: block;
       list-style: none;
-      width: 20px;
-      height: 20px;
-      background: rgba(255, 255, 255, 0.2);
+      width: 10px;
+      height: 30px;
+      background: linear-gradient(60deg, #000000, #f9fff9,#d4ff15);
       animation: animate 25s linear infinite;
       bottom: -150px;
       
