--- a/src/app/vistas/Componentes/cards/cards.component.scss
+++ b/src/app/vistas/Componentes/cards/cards.component.scss
@@ -33,11 +33,11 @@
 }
 
 .mat-card.danger {
-    background: linear-gradient(60deg, #53343e, #ff176c);
+    background: linear-gradient(60deg, #750f30, #750f30);
 }
 
 .mat-card.warn {
-    background: linear-gradient(60deg, #ffa726, #fb8c00);
+    background: linear-gradient(60deg, #dd890b, #dd890b);
 }
 
 .mat-card.success {
@@ -45,5 +45,5 @@
 }
 
 .mat-card.info {
-    background: linear-gradient(60deg, #d9ff04, #00acc1);
+    background: linear-gradient(60deg, #02557c, #02557c);
 }
