--- a/src/app/vistas/clientes/datatable/datatable.component.html
+++ b/src/app/vistas/clientes/datatable/datatable.component.html
@@ -22,42 +22,27 @@
     <div class="example-container mat-elevation-z8">
 
         <div class="example-container mat-elevation-z8">
-            <mat-table [dataSource]="datosClientes" >
-             
-      
-              <!-- Columna Nombre -->
-              <ng-container matColumnDef="Nombres">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Nombres</mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row | json}} </mat-cell>
-              </ng-container>
-      
-              <!-- Columna Apellido-->
-              <ng-container matColumnDef="Apellidos">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Apellidos </mat-header-cell>
-            <mat-cell *matCellDef="let row"> {{row.apellido}} </mat-cell>
-              </ng-container>
-      
-              <!-- Columna Domicilio -->
-              <ng-container matColumnDef="Domicilio">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Domicilio</mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.domicilio}} </mat-cell>
-              </ng-container>
-      
-               <!-- Columna Rut -->
-               <ng-container matColumnDef="Rut">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Rut </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.rut}} </mat-cell>
-              </ng-container>
-                <!-- Columna Ciudad -->
-                <ng-container matColumnDef="Ciudad">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header> Ciudad </mat-header-cell>
-                    <mat-cell *matCellDef="let row"> {{row.ciudad.nombre}} </mat-cell>
-              </ng-container>
-      
-      
-              <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
-              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
+          <table mat-table [dataSource] = "dataSource" class = "mat-elevation-z8"> 
+            <ng-container matColumnDef = "nombre">
+               <th mat-header-cell *matHeaderCellDef> Nombre</th>
+               <td mat-cell *matCellDef = "let element"> {{element.nombre}} </td>
+            </ng-container>
+            <ng-container matColumnDef = "apellido">
+               <th mat-header-cell *matHeaderCellDef>Apellido</th>
+               <td mat-cell *matCellDef = "let element"> {{element.apellido}} </td>
+            </ng-container>
+            <ng-container matColumnDef = "rut">
+               <th mat-header-cell *matHeaderCellDef>Rut</th>
+               <td mat-cell *matCellDef = "let element"> {{element.rut}} </td>
+            </ng-container>
+            <ng-container matColumnDef = "domicilio">
+               <th mat-header-cell *matHeaderCellDef>Domicilio</th>
+               <td mat-cell *matCellDef = "let element"> {{element.domicilio}} </td>
+            </ng-container>
+          
+            <tr mat-header-row *matHeaderRowDef = "displayedColumns"></tr>
+            <tr mat-row *matRowDef = "let row; columns: displayedColumns;"></tr>
+         </table>
       </div>
 
 
