--- a/src/app/vistas/clientes/datatable/datatable.component.css
+++ b/src/app/vistas/clientes/datatable/datatable.component.css
@@ -27,7 +27,7 @@
   }
 
   .mat-row:nth-child(even){
-    background-color:rgb(250, 212, 212)
+    background-color:rgb(208, 209, 212);
   }
 
 .mat-row:nth-child(odd){
