--- a/src/app/vistas/clientes/datatable/datatable.component.html
+++ b/src/app/vistas/clientes/datatable/datatable.component.html
@@ -22,7 +22,7 @@
     <div class="example-container mat-elevation-z8">
 
         <div class="example-container mat-elevation-z8">
-          <table mat-table [dataSource] = "dataSource" class = "mat-elevation-z8"> 
+          <table mat-table [dataSource] = "dataSource"  class = "mat-elevation-z8"> 
             <ng-container matColumnDef = "nombre">
                <th mat-header-cell *matHeaderCellDef> Nombre</th>
                <td mat-cell *matCellDef = "let element"> {{element.nombre}} </td>
@@ -39,10 +39,22 @@
                <th mat-header-cell *matHeaderCellDef>Domicilio</th>
                <td mat-cell *matCellDef = "let element"> {{element.domicilio}} </td>
             </ng-container>
-          
+            <ng-container matColumnDef="actions">
+              <mat-header-cell *matHeaderCellDef>Opciones </mat-header-cell>
+              <mat-cell *matCellDef="let row">
+                <button mat-icon-button matTooltip="Click para editar" class="iconbutton" color="primary">
+                    <mat-icon aria-label="Edit">editar</mat-icon>
+                  </button>
+                <button mat-icon-button matTooltip="Click para eliminar" class="iconbutton" color="warn">
+                    <mat-icon aria-label="Delete">delete</mat-icon>
+                  </button>
+              </mat-cell>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef = "displayedColumns"></tr>
             <tr mat-row *matRowDef = "let row; columns: displayedColumns;"></tr>
          </table>
+         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
       </div>
 
 
