--- a/src/app/vistas/layout.component.html
+++ b/src/app/vistas/layout.component.html
@@ -1,25 +1,71 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation">
-    <app-sidebar (sidenavClose)="sidenav.close()"></app-sidebar>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="!(isHandset$ | async)" *ngIf="MenuMostrar" >
+    <mat-toolbar> <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="ToggleMenu()"
+        *ngIf="MenuMostrar==true"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+
+       
+      </button>
+      
+    </mat-toolbar> </mat-toolbar>
+    <mat-nav-list>
+      
+      <a  mat-list-item  [routerLink]="['/clientes']" [routerLinkActive]="['router-link-active']" class="list-group-item" matTooltip="Ir a modulo de clientes" >
+        <i class="fa fa-users"></i>&nbsp;
+        <span>Clientes </span>
+       </a>
+       <a  mat-list-item  [routerLink]="['/usuarios']" [routerLinkActive]="['router-link-active']" class="list-group-item" matTooltip="Ir a modulo de clientes" >
+        <i class="fas fa-user"></i>&nbsp;
+        <span>Usuarios </span>
+       </a>
+       <a  mat-list-item  [routerLink]="['/productos']" [routerLinkActive]="['router-link-active']" class="list-group-item" matTooltip="Ir a modulo de clientes" >
+        <i class="fas fa-store-alt"></i>&nbsp;
+        <span>Productos </span>
+       </a>
+       <a  mat-list-item  [routerLink]="['/mapas']" [routerLinkActive]="['router-link-active']" class="list-group-item" matTooltip="Ir a modulo de clientes" >
+        <i class="fas fa-map-marked-alt "></i>&nbsp;
+        <span>Mapa </span>
+       </a>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-navbar (sidenavToggle)="sidenav.toggle()"> </app-navbar>
-
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="ToggleMenu()"
+        *ngIf="MenuMostrar==false"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs *ngIf="UsuarioLogeado">
+   
+        <button mat-button (click)="cerrarSesion()"><mat-icon>exit_to_app</mat-icon></button>
+      </div>
+    </mat-toolbar>
+  
 <div class="container">
-    <router-outlet>
-  
-  
-  
-  
-  
-  
-  
-    </router-outlet>
-
-  </div>
+  <router-outlet>
 
 
 
 
+
+
+
+  </router-outlet>
+
+</div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
