--- a/src/app/vistas/home/home.component.html
+++ b/src/app/vistas/home/home.component.html
@@ -12,16 +12,12 @@
      <mat-card-content>
       
         <div class="row" >
-            <div class="col-xl-3 col-lg-5">
-                    <app-cards [bgClass]="'danger'" [routerLink]="['/clientes']"   [icon]="'people'" [label]="'Clientes'"></app-cards>
-            </div>
+       
     
             <div class="col-xl-3 col-lg-5">
-                    <app-cards [bgClass]="'info'" [routerLink]="['/usuarios']" [icon]="'people'" [label]="'Usuarios'"></app-cards>
+                    <app-cards [bgClass]="'info'" [routerLink]="['/clientes']" [icon]="'people'" [label]="'Clientes '"></app-cards>
             </div>
-            <div class="col-xl-3 col-lg-5">
-                <app-cards [bgClass]="'danger'" [routerLink]="['/productos']" [icon]="'local_grocery_store'" [label]="'Productos'"></app-cards>
-        </div>
+     
         </div>
      </mat-card-content>
      <mat-card-actions>
