--- a/src/app/vistas/layout.component.scss
+++ b/src/app/vistas/layout.component.scss
@@ -5,9 +5,10 @@ mat-sidenav-container, mat-sidenav-content, mat-sidenav {
  
 mat-sidenav {
     width: 250px;
+    
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
 }
  
 main {
@@ -22,7 +23,7 @@ main {
   
   .sidenav .mat-toolbar {
   
-    background:  #3F5182;
+    background:  #3f51b5;
     color: white;
   }
   
@@ -32,11 +33,7 @@ main {
     z-index: 1;
   }
   
-  .mat-toolbar{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: linear-gradient(60deg, #3F5182, rgb(4, 11, 31));
 
-}
 
 .mat-nav-list 
     .mat-list-item {
@@ -47,6 +44,11 @@ main {
 }
 
 
-.container{
+.contenedor{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 87%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
